add contact page and navigation

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <p>Nauczyciel nie wytłumaczył na lekcji niczego?</p>
           <p>Teraz to nie problem!</p>
           <div class="buttons-container">
-            <a class="navigation-button">o MathMasters</a>
-            <a class="navigation-button">o Aplikacji</a>
-            <a class="navigation-button">Kontakt</a>
+            <a class="navigation-button" href="#page2">o MathMasters</a>
+            <a class="navigation-button" href="#page3">o Aplikacji</a>
+            <a class="navigation-button" href="#page4">Kontakt</a>
           </div>
           <div class="store-links-container">
             <div class="store-link">
@@ -42,7 +42,7 @@
     </div>
 
     <!-- PAGE 2 -->
-    <div class="page page-blue">
+    <div id="page2" class="page page-blue">
       <img class="mathmasterslogo" src="./resources/mathmasterslogo.png">
       <div class="mathmasters-description">
         <h1>Kim są MathMasters?</h1>
@@ -59,12 +59,24 @@
     </div>
 
     <!-- PAGE 3 -->
-    <div class="page">
+    <div id="page3" class="page">
       <div class="main-container">
         <img id="slide-phone" class="phone-image" src="./resources/mainphone.png">
         <div class="content-container text-slider">
           <h1 id="slide-title">Przeglądaj rozwiązania zadań szybko i łatwo</h2>
           <h3 id="slide-description"></h3>
+        </div>
+      </div>
+    </div>
+
+    <!-- PAGE 4 -->
+    <div id="page4" class="page page-blue">
+      <div class="main-container">
+        <img src="./resources/mathmasterslogo.png" class="contact-logo">
+        <div class="contact-info">
+          <p>Masz pytania? Pomysły na naowe funkcjonalności?</p>
+          <p>Napisz!</p>
+          <h1>mathmasters.contact@gmail.com</h1>
         </div>
       </div>
     </div>
